src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A26.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A26 {
  class A;
  class B;
  class C;
  class D;

  association assoc2 [1] C <-> D [1];
  association assoc1 A -> B [1];
}
